2021-08-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-lexical-intro): added a section "5. A thread"
	with links to a discussion in the help-gnu-emacs mailing list.

	* eepitch.el (find-vtermprocess): added a `(require 'vterm)'.

2021-08-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (bryl): commented out.

2021-08-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-lexical-intro): new function.

	* eev-eval.el (ee-eval-lexical): new function.
	(ee-eval-last-sexp-11): new function.

2021-08-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-eval.el (ee-eval-last-sexp): rewrote completely.
	(ee-eval-last-sexp-9): commented out.

	* eev-prepared.el (octal-to-num): renamed to `ee-octal-to-num'.

	* eepitch.el (at-eepitch-target): deleted. It was a copy of
	`eepitch-eval-at-target-window', but with a bad name.
	(del-echo): renamed to `eepitch-del-echo'.

	* eev-on-windows.el (add-to-PATH): renamed to `ee-add-to-PATH'.

2021-08-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-0x0-url): new variable.
	(ee-0x0-upload-region, find-0x0-links): new functions.

	* eev-env.el: added a "(require 'eepitch)".

2021-08-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-vtermprocess): new function.
	(eepitch-vterm): use `find-vtermprocess'.

2021-08-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-wget-elisp): new function.
	(find-wgeta-elisp): new function.

2021-08-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (ee-find-callprocess00-exit-status): new variable.
	(find-callprocess00-ne): use `ee-find-callprocess00-exit-status'.
	(find-wget): use `ee-find-callprocess00-exit-status'.
	(find-wgeta): new function.

2021-07-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): new function.
	(find-git-links): added "-" to the list of characters that are
	deleted to form the "{c}" argument to `code-c-d'.

2021-06-18  Eduardo Ochs  <eduardoochs@gmail.com>
