@@ -1,3 +1,9 @@
+2021-08-22  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-tlinks.el (ee-youtubedl-subtitle-p): new function.
+	(ee-youtubedl-not-subtitles): new function.
+	(ee-youtubedl-guess): use `ee-youtubedl-not-subtitles'.
+
 2021-08-16  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (find-lexical-intro): added a section "5. A thread"
